# uasp

./: .gitignore  README.md  pyproject.toml  uasp-specification.md
agent-skills/: README.md  registry.json
agent-skills/_template/: README.md  skill-name.uasp.yaml.template
agent-skills/agent-browser/: README.md  agent-browser.uasp.yaml
agent-skills/mermaid-diagrams/: README.md  mermaid-diagrams.uasp.yaml
agent-skills/stripe-best-practices/: README.md
docs/: api-reference.md  architecture.md  cli-reference.md  conversion.md  examples.md  getting-started.md  index.md  query-interface.md  skill-types.md  state-management.md
examples/: stripe-best-practices.uasp.yaml
src/uasp/: __init__.py
src/uasp/cli/: __init__.py  main.py
src/uasp/convert/: __init__.py  md_to_uasp.py  prompts.py  uasp_to_md.py
src/uasp/core/: __init__.py  errors.py  loader.py  query.py  version.py
src/uasp/models/: __init__.py  skill.py
src/uasp/runtime/: __init__.py  executor.py  skill_runtime.py  state_manager.py
src/uasp/schema/: __init__.py  skill.json  validator.py
tests/: __init__.py  conftest.py
tests/fixtures/: minimal.uasp.yaml
tests/unit/: __init__.py  test_cli.py  test_convert.py  test_examples.py  test_executor.py  test_loader.py  test_models.py  test_query.py  test_runtime.py  test_state_manager.py  test_validator.py  test_version.py
